<resources>
    <string name="app_name">EasyMeal</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="to_register">Register</string>
    <string name="to_login">Login with email</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_pantry">Pantry</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_shopping_list">Grocery</string>
    <string name="cd_recipe_image">Recipe image</string>
    <string name="title_activity_recipe_detail">RecipeDetailActivity</string>
    <string name="hour_format">"%1$d h "</string>
    <string name="minute_format">%1$d m</string>
    <string name="serving_format">%1$d servings</string>
    <string name="placeholder_time"> </string>
    <string name="placeholder_serving"> </string>
    <string name="cd_favorite_button">Favorite button</string>
    <string name="placeholder_title"> </string>
    <string name="placeholder_description"> </string>
    <string name="tab_ingredients">Ingredients</string>
    <string name="tab_steps">Steps</string>
    <string name="detail_ingredient_qty">%1$s %2$s</string>
    <string name="cd_capture">Capture image</string>
    <string name="cd_rotate">Rotate camera</string>
    <string name="response_login_credentials_incorrect">Email or password incorrect</string>
    <string name="response_login_failed">Login failed</string>
    <string name="response_login_success">Login successful!</string>
    <string name="confirm">Confirm password</string>
    <string name="response_register_confirm_fail">Password and confirmation is not the same</string>
    <string name="response_register_failed">Register failed</string>
    <string name="response_register_success">Register successful!</string>
    <string name="open_camera_failed">Could not open camera!</string>
    <string name="cd_detection_image">Detection image</string>
    <string name="placeholder_ingredient_name"> </string>
    <string name="cd_recipe_instructions">Recipe instructions</string>
    <string name="cd_back_button">Back button</string>
    <string name="update">Update</string>
    <string name="placeholder_email"> </string>
    <string name="setting_change_name">Change name</string>
    <string name="placeholder_name"> </string>
    <string name="logout">Logout</string>
    <string name="welcome_text">Welcome to EasyMeal</string>
    <string name="placeholder_percentage"> </string>
    <string name="empty_pantry_desc">Add ingredients in your pantry and we\'ll find the best recipes for you!</string>
    <string name="empty_pantry">Your pantry is empty</string>
    <string name="placeholder_category"> </string>
    <string name="opening_camera">Opening camera</string>
    <string name="import_gallery">Import gallery</string>
    <string name="permission_camera_not_granted">Permission is not granted</string>
    <string name="choose_detected">Choose detection results</string>
    <string name="capture">Capture</string>
    <string name="add_to_pantry">Add To Pantry</string>
    <string name="most_likely">Best match: %1$s</string>
    <string name="return_to_main">Return</string>
    <string name="already_in_pantry">%1$s is already in your pantry!</string>
    <string name="add_ingredient_failed">Failed to add ingredient!</string>
    <string name="ingredient_added">%1$s added!</string>
    <string name="empty_favorite">No favorite recipes listed</string>
    <string name="empty_favorite_desc">Find recipes you like and see them here!</string>
    <string name="empty_shopping">Your shopping list is empty</string>
    <string name="empty_shopping_desc">Find recipes and add ingredients you are missing to the list!</string>
    <string name="welcome_text_desc">Find the best recipes for you according to what you already have!</string>
    <string name="login_desc">Enter your email and password to continue</string>
    <string name="register_desc">Enter your name, email, and password to register</string>
    <string name="have_all_ingredients">You have all ingredients!</string>
    <string name="ingredients_missing">You\'re missing %1$s</string>
    <string name="show_pantry_ishave">Show mine</string>
    <string name="recommend_recipes">Recommend me recipes</string>
    <string name="what_in_pantry">What is in your pantry?</string>
    <string name="what_in_pantry_desc">Add ingredients that you have</string>
    <string name="recipe_recommended">Here are the best recipes for you</string>
    <string name="what_to_buy">What you need to get</string>
    <string name="setting">Setting</string>
    <string name="take_photo">Take Photo</string>
    <string name="import_from_gallery">Import From Gallery</string>
    <string name="ingredient_not_recognized">Not sure about an ingredient?</string>
    <string name="ingredient_not_recognized_desc">Take a picture and detect it immediately!</string>
    <string name="detection_failed">Sorry, could not detect any ingredient</string>
    <string name="email_already">Email already registered</string>
    <string name="cannot_be_empty">Fields cannot be empty!</string>
    <string name="detecting">Detecting, please wait</string>
    <string name="maximum_time">Maximum time</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="number_of_servings">Number of servings</string>
    <string name="servings">servings</string>
    <string name="serving">serving</string>
    <string name="time_capital">Time</string>
    <string name="servings_capital">Servings</string>
    <string name="favorite_capital">Favorite</string>
    <string name="search_recipes">Search recipes…</string>
    <string name="name_changed_success">Name changed successfully!</string>
    <string name="recipe_in_favorite">Recipe in your favorites</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_sure">Sorry, we could not be very sure</string>
    <string name="alternative_detection">We are %1$s\%% sure it is %2$s</string>
</resources>