<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_recipe">

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.doanda.easymeal.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/navigation_pantry"
        android:name="com.doanda.easymeal.ui.pantry.PantryFragment"
        android:label="@string/title_pantry"
        tools:layout="@layout/fragment_pantry" >
        <action
            android:id="@+id/action_navigation_pantry_to_navigation_recipe"
            app:destination="@id/navigation_recipe" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.doanda.easymeal.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_shopping_list"
        android:name="com.doanda.easymeal.ui.shoppinglist.ShoppingListFragment"
        android:label="@string/title_shopping_list"
        tools:layout="@layout/fragment_shopping_list" />

</navigation>