<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        tools:context=".ui.setting.SettingActivity"
        >

        <ImageView
            android:id="@+id/iv_setting_user"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_round_account_circle"
            app:tint="@color/grey_lighter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_setting_user"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_email"
            android:textSize="14sp"
            android:textStyle="normal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
            app:layout_constraintStart_toEndOf="@+id/iv_setting_user"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_update"
            style="@style/Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_email"
            app:layout_constraintStart_toEndOf="@+id/iv_setting_user"/>

        <TextView
            android:id="@+id/tv_change_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_change_name"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_update"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_setting_name"
            style="@style/TextField.Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_setting_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_logout"
            style="@style/Button.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tf_setting_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ProgressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
