<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_recipe"
    style="@style/ImageView.Corner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center"
    android:layout_marginStart="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="4dp"
    android:elevation="8dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_recipe_image"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:contentDescription="@string/cd_recipe_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            tools:srcCompat="@drawable/photo_sotoayam" />

        <TextView
            android:id="@+id/tv_recipe_time"
            style="@style/TextViewRecipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/placeholder_time"
            app:drawableLeftCompat="@drawable/recipe_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_recipe_image" />

        <TextView
            android:id="@+id/tv_recipe_serving"
            style="@style/TextViewRecipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/placeholder_serving"
            app:drawableLeftCompat="@drawable/recipe_portion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_recipe_image" />

        <TextView
            android:id="@+id/tv_recipe_warning"
            style="@style/TextViewRecipe.Warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/placeholder_warning"
            app:drawableLeftCompat="@drawable/recipe_warning"
            app:layout_constraintBottom_toBottomOf="@+id/iv_recipe_image"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btn_recipe_favorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/circle_transparent_button_background"
            android:src="@drawable/ic_round_favorite"
            android:gravity="center"
            android:contentDescription="@string/cd_favorite_button"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/iv_recipe_image"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_recipe_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:maxLines="2"
            android:text="@string/placeholder_title"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_recipe_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>